# teric

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  misc.txt
src/: client.cpp  color.cpp  context.cpp  local.cpp  main.cpp  message.cpp  networking.cpp  server.cpp  user.cpp
src/include/: client.hpp  color.hpp  colorconsole.hpp  context.hpp  guild.hpp  local.hpp  message.hpp  networking.hpp  server.hpp  socket.hpp  user.hpp
